--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,27 @@ docs/source/index.md
 .gitignore
 第六周周报jasmine(1).pdf
 image.png
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/heightmap_stairs.hfield
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/heightmap.png
+motrix_envs/src/motrix_envs/locomotion/anymal_c/xmls/assets/arrow.obj
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/calf.stl
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/hip.stl
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/thigh_mirror.stl
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/thigh.stl
+motrix_envs/src/motrix_envs/locomotion/go1/xmls/assets/trunk.stl
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/base_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/base_1.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/base_2.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/base_3.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/base_4.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/calf_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/calf_1.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/calf_mirror_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/calf_mirror_1.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/foot.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/hip_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/hip_1.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_1.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_0.obj
+motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_1.obj
