优化导航点，减少穿模

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_0.obj
 motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_1.obj
 motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_0.obj
 motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_1.obj
+motrix_envs.zip
+motrix_rl.zip
