--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,53 @@ motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_0.obj
 motrix_envs/src/motrix_envs/locomotion/go2/xmls/assets/thigh_mirror_1.obj
 motrix_envs.zip
 motrix_rl.zip
+motrix_envs/src/motrix_envs/navigation（复件）/__init__.py
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/__init__.py
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/anymal_c_np.py
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/cfg.py
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/anymal_c.xml
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/scene.xml
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_0.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_1.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_2.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_3.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_4.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base_5.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/base.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/battery.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/battery.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/bottom_shell.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/bottom_shell.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/cone.stl
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/depth_camera.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/depth_camera.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/drive.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/drive.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/face.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/face.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/foot.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/foot.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/handle.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/handle.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hatch.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hatch.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hip_l.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hip_l.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hip_r.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/hip_r.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/lidar_cage.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/lidar_cage.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/lidar.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/lidar.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/remote.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/remote.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/shank_l.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/shank_l.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/shank_r.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/shank_r.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/thigh.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/thigh.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/top_shell.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/top_shell.png
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/wide_angle_camera.obj
+motrix_envs/src/motrix_envs/navigation（复件）/anymal_c/xmls/assets/wide_angle_camera.png
